<resources>
    <string name="app_name">ChallengeMe</string>
    <string name="title_activity_maps">Map</string>
    <string name="MAP_API_KEY">AIzaSyBqb5bCeJ_SU9en13PozYpk5SXNthPskqg</string>
    <string name="descriptionTitle">Описание</string>
    <string name="guideTitle">Гайд</string>
    <string name="whereTitle">Где можно этим заняться?</string>
    <string name="openMapButtonTitle">Открыть карту</string>
    <string name="companyTitle">Нужна компания?</string>
    <string name="findCompanyButtonTitle">Найти компанию</string>
    <string name="exercisesTitle">Уже умеете? Вот несколько упражнений!</string>
    <string name="dayCounterTitle">Идет 2 день</string>
    <string name="nameTitle">Название активности</string>
    <string name="categoryTitle">Категория</string>
    <string name="dateTitle">Дата</string>
    <string name="mapIntent">MapModel</string>
    <string name="modelIntent">HobbyModel</string>


    <string name="standardUrl">http://188.225.46.84</string>
    <string name="getHobbyURL"></string>
    <string name="loginUserURL">http://188.225.46.84/json123</string>
    <string name="registrationURL"></string>
    <string name="mapMarkersURL"></string>
    <string name="userChallengesURL"></string>
    <string name="userAchievementsURL"></string>


    <string name="title_activity_login">Войти</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>
    <string name="prompt_name">Имя</string>
    <string name="confirm_password">Повторите пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_up">Зарегистрироваться</string>
    <string name="action_sign_in_short">Войти</string>


    <string name="welcome">Добро пожаловать,</string>
    <string name="sign_up_success">Регистрация прошла успешно! Можете авторизоваться :)</string>
    <string name="registration_failed">Регистрация не удалась :(</string>
    <string name="invalid_username">Некорректный e-mail адрес!</string>
    <string name="invalid_password">Пароль должен содержать больше 4 символов!</string>
    <string name="invalid_displayName">Имя должно содержать больше 4 символов!</string>
    <string name="invalid_confirm">Пароли не совпадают!</string>
    <string name="empty_field">Пустое поле!</string>
    <string name="login_failed">Не удалось авторизоваться</string>
    <string name="toRegistration"><u>Все еще нет аккаунта? Скорее зарегистрируйтесь!</u></string>


    <string name="title_activity_profile">Профиль</string>
    <string name="title_home">Профиль</string>
    <string name="title_dashboard">QR-код</string>
    <string name="title_notifications">Чат</string>
    <string name="profileTitle">Профиль</string>
    <string name="applyButton">Применить</string>
    <string name="editButton">Редактировать</string>
    <string name="logoutButton">Выход</string>
    <string name="logoutTitle">Выйти из профиля?</string>
    <string name="logoutText">Выйти из профиля?</string>


    <string name="userCache">userCache</string>
    <string name="userCacheLogin">userCacheLogin</string>
    <string name="userCachePassword">userCachePassword</string>
    <string name="userList">userList</string>


    <string name="showAllUserChallenges"><u>Показать все выполненные Челленджи</u></string>
    <string name="UserAchievementsTitle">Мои Достижения</string>
    <string name="userChallengesTitle">Мои Челленджи</string>
    <string name="UserDisplayNameField">Имя:</string>
    <string name="userDisplayCityField">Город:</string>
    <string name="userDisplayRangField">Ранг:</string>
    <string name="UserAboutTitle">О себе</string>
    <string name="viewMoreAchievements"><u>Показать все полученные достижения</u></string>


    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <string name="intentDisplayName">usrdn</string>
    <string name="intentLogin">usrl</string>
    <string name="intentPicture">usrp</string>
    <string name="intentId">usrid</string>
    <string name="all_error">Логин занят и старый пароль неверен</string>
    <string name="oldPass_error">Старый пароль не совпадает с текущим вводом</string>
    <string name="loginIsTaken_error">Логин занят</string>
    <string name="change_success">Все ок</string>
    <string name="error">Произошла ошибка. Попробуйте снова</string>
    <string name="sameFieldsOrPassword_error">Вы не меняли данные или неправильно повторили пароль</string>
    <string name="userId">id</string>
</resources>
