<?xml version="1.0" encoding="utf-8"?>
<com.github.florent37.shapeofview.shapes.ArcView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="#00FFFFFF"
    android:elevation="4dp"
    android:visibility="visible"
    app:shape_arc_cropDirection="outside"
    app:shape_arc_height="20dp"
    app:shape_arc_position="bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <TextView
            android:id="@+id/date_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dateTitle" />

        <TextView
            android:id="@+id/day_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dayCounterTitle" />

        <TextView
            android:id="@+id/hobby_name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nameTitle"
            android:textSize="24sp" />

        <RatingBar
            android:id="@+id/difficulty_rb"
            style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            android:max="5"
            android:numStars="5"
            android:stepSize="1" />

        <TextView
            android:id="@+id/category_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/categoryTitle" />

    </LinearLayout>
    <!-- YOUR CONTENT -->

</com.github.florent37.shapeofview.shapes.ArcView>
