<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <FrameLayout
                    android:id="@+id/frameLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.github.florent37.shapeofview.shapes.CircleView
                        android:id="@+id/userAvatarForm"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:elevation="4dp"
                        app:shape_circle_borderColor="@color/colorAccent"
                        app:shape_circle_borderWidth="4dp">

                        <!-- YOUR CONTENT -->

                        <ImageView
                            android:id="@+id/userProfilePicture_ImageView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            tools:srcCompat="@tools:sample/avatars[3]" />
                    </com.github.florent37.shapeofview.shapes.CircleView>

                </FrameLayout>

                <TextView
                    android:id="@+id/aboutTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="64sp"
                    android:layout_marginTop="24dp"
                    android:text="@string/UserAboutTitle"
                    android:textAppearance="@style/CM_body_label"
                    app:layout_constraintStart_toEndOf="@+id/frameLayout"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/userRang_TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="UserRang"
                    android:textAppearance="@style/CM_text_style"
                    app:layout_constraintStart_toEndOf="@+id/userRang_Title"
                    app:layout_constraintTop_toBottomOf="@+id/userPosition_TextView" />

                <TextView
                    android:id="@+id/userRang_Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/userDisplayRangField"
                    android:textAppearance="@style/CM_text_style"
                    app:layout_constraintStart_toEndOf="@+id/frameLayout"
                    app:layout_constraintTop_toBottomOf="@+id/userCity_Title" />

                <TextView
                    android:id="@+id/userPosition_TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="UserCity"
                    android:textAppearance="@style/CM_text_style"
                    app:layout_constraintStart_toEndOf="@+id/userCity_Title"
                    app:layout_constraintTop_toBottomOf="@+id/userDisplayName_TextView" />

                <TextView
                    android:id="@+id/userCity_Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/userDisplayCityField"
                    android:textAppearance="@style/CM_text_style"
                    app:layout_constraintStart_toEndOf="@+id/frameLayout"
                    app:layout_constraintTop_toBottomOf="@+id/userDisplayName_Title" />

                <TextView
                    android:id="@+id/userDisplayName_Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/UserDisplayNameField"
                    android:textAppearance="@style/CM_text_style"
                    app:layout_constraintStart_toEndOf="@+id/frameLayout"
                    app:layout_constraintTop_toBottomOf="@+id/aboutTitle" />

                <TextView
                    android:id="@+id/userDisplayName_TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="DisplayName"
                    android:textAppearance="@style/CM_text_style"
                    app:layout_constraintStart_toEndOf="@+id/userDisplayName_Title"
                    app:layout_constraintTop_toBottomOf="@+id/aboutTitle" />

                <ProgressBar
                    android:id="@+id/userRang_progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="100sp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:max="100"
                    app:layout_constraintStart_toEndOf="@+id/frameLayout"
                    app:layout_constraintTop_toBottomOf="@+id/userRang_TextView" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/editButton"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="Редактировать профиль" />

            <TextView
                android:id="@+id/userChallenges_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/userChallengesTitle"
                android:textAppearance="@style/CM_body_label" />

            <androidx.cardview.widget.CardView
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8sp"
                android:layout_marginBottom="8sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lastChallengeName_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8sp"
                        android:text="Название последнего челленджа"
                        android:textAlignment="center"
                        android:textAppearance="@style/CM_text_style" />

                    <ImageView
                        android:id="@+id/lastChallengePic_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="100sp"
                        android:layout_gravity="center"
                        android:layout_marginTop="8sp"
                        android:layout_marginBottom="8sp"
                        app:srcCompat="@drawable/tmp_image" />

                    <RatingBar
                        android:id="@+id/lastChallengeDiff_pb"
                        style="@style/Widget.AppCompat.RatingBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:max="5"
                        android:numStars="5"
                        android:stepSize="1" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/viewMoreChallenges_Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/showAllUserChallenges"
                android:textAlignment="center"
                android:onClick="onViewMoreClick"/>

            <TextView
                android:id="@+id/userAchievements_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/UserAchievementsTitle"
                android:textAppearance="@style/CM_body_label" />

            <include
                layout="@layout/item_achievements"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/viewMoreAchievements_Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/viewMoreAchievements"
                android:textAlignment="center"
                android:onClick="onViewMoreClick"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>